--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -8,5 +8,9 @@
             android:title="@string/create_story"
             android:icon="@drawable/ic_add"
             app:showAsAction="always" />
+        <item android:id="@+id/logout"
+            android:title="@string/logout"
+            android:icon="@drawable/ic_logout"
+            app:showAsAction="ifRoom"/>
     </group>
 </menu>
