--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white2"
     tools:context=".ui.DetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,8 +15,9 @@
         <ImageView
             android:id="@+id/image_photo"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="380dp"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -30,22 +32,26 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:textSize="14sp"
+            android:text="@string/user_name"
+            android:textColor="@color/navy"
+            android:textStyle="italic"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/image_photo"
-            card_view:layout_constraintVertical_bias="0.1"
-            tools:text="Name of the picture" />
+            card_view:layout_constraintVertical_bias="0.1" />
 
         <TextView
             android:id="@+id/text_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
+            android:textSize="16sp"
+            android:textColor="@color/navy"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
