--- a/app/src/main/res/layout/item_story_list.xml
+++ b/app/src/main/res/layout/item_story_list.xml
@@ -11,6 +11,7 @@
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:backgroundTint="@color/white"
     card_view:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,9 +22,12 @@
             android:id="@+id/image_photo"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="16dp"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/content_description"
             tools:src="@tools:sample/avatars" />
 
         <TextView
@@ -34,12 +38,14 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:text="@string/user_name"
             android:textSize="14sp"
+            android:textStyle="italic"
+            android:textColor="@color/black"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/image_photo"
-            tools:text="User name"/>
+            card_view:layout_constraintTop_toBottomOf="@id/image_photo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
