--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,6 +18,7 @@
             android:layout_height="380dp"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
+            android:transitionName="image"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -35,6 +36,7 @@
             android:text="@string/user_name"
             android:textColor="@color/navy"
             android:textStyle="italic"
+            android:transitionName="name"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.0"
