--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -8,6 +8,10 @@
             android:title="@string/create_story"
             android:icon="@drawable/ic_add"
             app:showAsAction="always" />
+        <item android:id="@+id/view_maps"
+            android:title="@string/locate_user"
+            android:icon="@drawable/ic_maps"
+            app:showAsAction="ifRoom" />
         <item android:id="@+id/logout"
             android:title="@string/logout"
             android:icon="@drawable/ic_logout"
