--- a/app/src/main/res/layout/item_story_list.xml
+++ b/app/src/main/res/layout/item_story_list.xml
@@ -11,8 +11,7 @@
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:backgroundTint="@color/white"
-    card_view:cardCornerRadius="10dp">
+    android:backgroundTint="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
